# veritrace

./: .env.example  .gitignore  Dockerfile  LICENSE  NOTICE  README.md  architecture_diagram.md  docker-compose.yml  pyproject.toml  run.ps1  run.sh
console/: index.html  package-lock.json  package.json  vite.config.ts
console/src/: App.tsx  api.ts  index.css  timeline.tsx  types.ts  ui.tsx
scripts/: enable-wsl.ps1  package_app.ps1  package_app.sh  verify_e2e.ps1
splunk_app/veritrace_app/: README.md  app.manifest
splunk_app/veritrace_app/default/: alert_actions.conf  app.conf  savedsearches.conf
splunk_app/veritrace_app/default/data/ui/alerts/: veritrace.html
splunk_app/veritrace_app/default/data/ui/nav/: default.xml
splunk_app/veritrace_app/default/data/ui/views/: veritrace_ledger.xml
tests/: test_offline_investigation.py
veritrace/: __init__.py  agent.py  chain.py  cli.py  config.py  detection.py  evidence.py  fixtures.py  ledger.py  mcp_client.py  mcp_server.py  prompts.py  provisioning.py  runtime.py  scenarios.py  schemas.py  server.py  soc.py  splunk_io.py
veritrace/data/: __init__.py  generator.py
veritrace/models/: __init__.py  base.py  factory.py  ollama_provider.py  openai_compat.py  replay.py  splunk_hosted.py
